--- a/lab-hello-react/src/App.css
+++ b/lab-hello-react/src/App.css
@@ -1,10 +1,19 @@
+.body {
+  font-size: 10px;
+}
+
 .App {
-  text-align: center;
+  background-color: #ffffff;
+
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
+}
+
+.menu-icon {
+  height: 2vmin;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -17,15 +26,64 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
+  align-content: center;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 4rem 4rem;
+}
+
+.top-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.header-content h1 {
+  font-size: 8rem;
+}
+
+.header-content p {
+  font-size: 2rem;
+}
+
+.btn {
+  width: fit-content;
+  padding: 8px 16px;
+  font-size: 2rem;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.content-area {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 4rem 4rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+}
+
+.icon {
+  height: 100%;
+  width: auto;
+  object-fit: contain;
+}
+
+.card p {
+  font-size: 1.4rem;
 }
 
 @keyframes App-logo-spin {
