--- a/lab-hello-react/src/App.css
+++ b/lab-hello-react/src/App.css
@@ -47,6 +47,7 @@
 
 .header-content h1 {
   font-size: 8rem;
+  margin-bottom: -1rem;
 }
 
 .header-content p {
@@ -73,7 +74,8 @@
 .card {
   display: flex;
   flex-direction: column;
-  width: 20%;
+  width: auto;
+  padding: 0 2rem;
 }
 
 .icon {
@@ -83,7 +85,7 @@
 }
 
 .card p {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 
 @keyframes App-logo-spin {
